--- a/Sito.html
+++ b/Sito.html
@@ -3,8 +3,8 @@
 <head>
 
   <title>Midmoon</title>
-  <link rel="stylesheet" href="DnDCss.css" type="text/css">
-  <script type="module" src="JavaDnD.js"></script>
+  <link rel="stylesheet" href="dnd.css.css" type="text/css">
+  <script type="module" src="javadnd.js"></script>
 
 </head>
 <body bgcolor="#333">
