--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <a name="Characters">
 <h1 id="ab" style="color:white">Characters</h1>
 <div style="text-align: center;">
-<img id="b" src="img/Indal.jpeg" alt="Indal">
-<img id="c" src="img/Ciaran-Photoroom.jpg" alt="Ciaran">
-<img id="d" src="img/Sigur.jpg" alt="Sigur"><br>
-<img id="e" src="img/Feng.jpg" alt="Feng">
-<img id="f" src="img/Aurelius.jpg" alt="Aurelius">
-<img id="g" src="img/Cinaed.jpg" alt="Cinaed">
+<img id="b" src="img/indal.jpg" alt="Indal">
+<img id="c" src="img/ciaran-photoroom.jpg" alt="Ciaran">
+<img id="d" src="img/sigur.jpg" alt="Sigur"><br>
+<img id="e" src="img/feng.jpg" alt="Feng">
+<img id="f" src="img/aurelius.jpg" alt="Aurelius">
+<img id="g" src="img/cinaed.jpg" alt="Cinaed">
 <div class="a"></div>
 
 <a name="Story">
