--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a name="Characters">
 <h1 id="ab" style="color:white">Characters</h1>
 <div style="text-align: center;">
-<img id="b" src="img/indal.jpg" alt="Indal">
+<img id="b" src="img/indal.jpeg" alt="Indal">
 <img id="c" src="img/ciaran-photoroom.jpg" alt="Ciaran">
 <img id="d" src="img/sigur.jpg" alt="Sigur"><br>
 <img id="e" src="img/feng.jpg" alt="Feng">
